# project-sentinel

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 55b2358c0f4d_widen_symbol_column_for_kalshi_tickers.py  a1b2c3d4e5f6_add_pnl_drawdown_to_portfolio_snapshots.py  b2c3d4e5f6a7_add_platform_to_trades.py  c3d4e5f6a7b8_add_real_money_total_to_portfolio_snapshots.py  f3d011afaf51_initial_schema.py
api/: main.py
backtesting/: __init__.py  data_loader.py  engine.py
config/: costs.py  risk_config.py  scheduler_config.py  symbols.py  tiers.py
dashboard/: package-lock.json  vite.config.ts
dashboard/src/: App.tsx  api.ts  hooks.ts  index.css
data/: database.py  models.py
data/repositories/: portfolio.py  risk_events.py  strategies.py  trades.py
docs/: RUNBOOK.md  chronicle.md  context.md
engines/: __init__.py  alerts.py  models.py  pipeline.py  recovery.py  scheduler.py
engines/execution/: alpaca.py  base.py  coinbase.py  kalshi.py  position_manager.py  shadow.py
engines/learning/: __init__.py  drought_detector.py  fast_loop.py  graveyard.py  slow_loop.py
engines/risk/: alerts.py  engine.py  rules.py  stress_test.py
engines/strategy/: base.py
memory/: __init__.py  context_manager.py  market_regime.py  strategy_journal.py  trade_journal.py
scripts/: run_pipeline_test.py  start.sh
tests/integration/: test_pipeline_persistence.py  test_repositories.py  test_tier_pipeline.py
tests/unit/: test_alpaca_adapter.py  test_backtesting.py  (+29 more)
(+16 files in other folders)
