[project]
name = "sentinel"
version = "0.1.0"
description = "Autonomous trading platform for equities, crypto, and prediction markets"
requires-python = ">=3.12"
dependencies = [
    # Core
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Cache
    "redis>=5.0.0",

    # Trading APIs
    "alpaca-py>=0.21.0",
    "httpx>=0.27.0",          # For Polymarket, Kalshi, Coinbase

    # Data & Analysis
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # Claude API (Learning Engine)
    "anthropic>=0.40.0",

    # Scheduling
    "apscheduler>=3.10.0",

    # Utilities
    "pytz>=2024.1",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]
backtesting = [
    "backtrader>=1.9.78",
    "matplotlib>=3.8.0",
]

[tool.setuptools.packages.find]
include = ["api*", "config*", "data*", "engines*", "memory*", "backtesting*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
